# Blog

./: .gitignore  License  README.md
next/: next.config.ts  package.json  pnpm-lock.yaml
next/docs/docker/: mirrors.md
next/docs/python/: fastapi_router.md  pip_search.md
next/docs/resource/: web.md
next/src/app/: layout.tsx  page.tsx
next/src/app/about/: page.tsx
next/src/app/docs/: page.tsx
next/src/app/docs/[index]/: page.tsx
next/src/app/home/: page.tsx
next/src/components/: logoloop.tsx  markdown.tsx  navbar.tsx
next/src/style/: global.css
next/src/svg/: AboutSVG.tsx  DocsSVG.tsx  GithubSVG.tsx  HomeSVG.tsx
react-fastapi/: dockerfile  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  start.sh  tsconfig.json  vite.config.ts
react-fastapi/backend/: main.py
react-fastapi/backend/docs/python/: pip_search.md
react-fastapi/backend/docs/resource/: language.md  web.md
react-fastapi/backend/docs/vscode/: settings.md
react-fastapi/frontend/: index.html
react-fastapi/frontend/src/: Layout.tsx  main.tsx  router.tsx
react-fastapi/frontend/src/components/: LogoLoop.tsx  Navbar.tsx
react-fastapi/frontend/src/pages/: About.tsx  Docs.tsx  DocsView.tsx  Home.tsx
react-fastapi/frontend/src/style/: global.css
react-fastapi/frontend/src/svg/: AboutSVG.tsx  DocsSVG.tsx  GithubSVG.tsx  HomeSVG.tsx
